--- a/_posts/2018-12-19-326-docker.md
+++ b/_posts/2018-12-19-326-docker.md
@@ -26,11 +26,11 @@ tags: [docker, namespaces, cgroups, unionfs, aufs]
 
 在这种情况下，一旦服务器上的某一个服务被入侵，那么入侵者就能够访问当前机器上的所有服务和文件，这也是我们不想看到的，而 Docker 其实就通过 Linux 的 Namespaces 对不同的容器实现了隔离。
 
-Linux 的命名空间机制提供了以下七种不同的命名空间，包括 `CLONE_NEWCGROUP`、`CLONE_NEWIPC`、`CLONE_NEWNET`、`CLONE_NEWNS`、`CLONE_NEWPID`、`CLONE_NEWUSER` 和 `CLONE_NEWUTS`，通过这七个选项我们能在创建新的进程时设置新进程应该在哪些资源上与宿主机器进行隔离。
+Linux 的命名空间机制提供了以下七种不同的命名空间，包括 *CLONE_NEWCGROUP*、*CLONE_NEWIPC*、*CLONE_NEWNET*、*CLONE_NEWNS*、*CLONE_NEWPID*、*CLONE_NEWUSER* 和 *CLONE_NEWUTS*，通过这七个选项我们能在创建新的进程时设置新进程应该在哪些资源上与宿主机器进行隔离。
 
 ### 进程
 
-进程是 Linux 以及现在操作系统中非常重要的概念，它表示一个正在执行的程序，也是在现代分时系统中的一个任务单元。在每一个 *nix 的操作系统上，我们都能够通过 `ps` 命令打印出当前操作系统中正在执行的进程，比如在 Ubuntu 上，使用该命令就能得到以下的结果：
+进程是 Linux 以及现在操作系统中非常重要的概念，它表示一个正在执行的程序，也是在现代分时系统中的一个任务单元。在每一个 *nix 的操作系统上，我们都能够通过 *ps* 命令打印出当前操作系统中正在执行的进程，比如在 Ubuntu 上，使用该命令就能得到以下的结果：
 
 ~~~shell
 $ ps -ef
@@ -45,11 +45,11 @@ root        40     2  0 Apr08 ?        00:01:54 [watchdog/0]
 ...
 ~~~
 
-当前机器上有很多的进程正在执行，在上述进程中有两个非常特殊，一个是 `pid` 为 1 的 `/sbin/init` 进程，另一个是 `pid` 为 2 的 `kthreadd` 进程，这两个进程都是被 Linux 中的上帝进程 `idle` 创建出来的，其中前者负责执行内核的一部分初始化工作和系统配置，也会创建一些类似 `getty` 的注册进程，而后者负责管理和调度其他的内核进程。
+当前机器上有很多的进程正在执行，在上述进程中有两个非常特殊，一个是 *pid* 为 1 的 */sbin/init* 进程，另一个是 *pid* 为 2 的 *kthreadd* 进程，这两个进程都是被 Linux 中的上帝进程 *idle* 创建出来的，其中前者负责执行内核的一部分初始化工作和系统配置，也会创建一些类似 *getty* 的注册进程，而后者负责管理和调度其他的内核进程。
 
 ![linux-processes](https://img.draveness.me/2017-11-30-linux-processes.png)
 
-如果我们在当前的 Linux 操作系统下运行一个新的 Docker 容器，并通过 `exec` 进入其内部的 `bash` 并打印其中的全部进程，我们会得到以下的结果：
+如果我们在当前的 Linux 操作系统下运行一个新的 Docker 容器，并通过 *exec* 进入其内部的 *bash* 并打印其中的全部进程，我们会得到以下的结果：
 
 ~~~shell
 root@iZ255w13cy6Z:~# docker run -it -d ubuntu
@@ -62,7 +62,7 @@ root         9     0  0 15:42 pts/1    00:00:00 /bin/bash
 root        17     9  0 15:43 pts/1    00:00:00 ps -ef
 ~~~
 
-在新的容器内部执行 `ps` 命令打印出了非常干净的进程列表，只有包含当前 `ps -ef` 在内的三个进程，在宿主机器上的几十个进程都已经消失不见了。
+在新的容器内部执行 *ps* 命令打印出了非常干净的进程列表，只有包含当前 *ps -ef* 在内的三个进程，在宿主机器上的几十个进程都已经消失不见了。
 
 当前的 Docker 容器成功将容器内的进程与宿主机器中的进程隔离，如果我们在宿主机器上打印当前的全部进程时，会得到下面三条与 Docker 相关的结果：
 
@@ -77,7 +77,7 @@ root      5006  1554  0 08:38 ?        00:00:00 docker-containerd-shim b809a2eb3
 
 ![docker-process-group](https://img.draveness.me/2017-11-30-docker-process-group.png)
 
-这就是在使用 `clone(2)` 创建新进程时传入 `CLONE_NEWPID` 实现的，也就是使用 Linux 的命名空间实现进程的隔离，Docker 容器内部的任意进程都对宿主机器的进程一无所知。
+这就是在使用 *clone(2)* 创建新进程时传入 *CLONE_NEWPID* 实现的，也就是使用 Linux 的命名空间实现进程的隔离，Docker 容器内部的任意进程都对宿主机器的进程一无所知。
 
 ~~~go
 containerRouter.postContainersStart
@@ -87,7 +87,7 @@ containerRouter.postContainersStart
             └── setNamespace
 ~~~
 
-Docker 的容器就是使用上述技术实现与宿主机器的进程隔离，当我们每次运行 `docker run` 或者 `docker start` 时，都会在下面的方法中创建一个用于设置进程间隔离的 Spec：
+Docker 的容器就是使用上述技术实现与宿主机器的进程隔离，当我们每次运行 *docker run* 或者 *docker start* 时，都会在下面的方法中创建一个用于设置进程间隔离的 Spec：
 
 ~~~go
 func (daemon *Daemon) createSpec(c *container.Container) (*specs.Spec, error) {
@@ -102,7 +102,7 @@ func (daemon *Daemon) createSpec(c *container.Container) (*specs.Spec, error) {
 }
 ~~~
 
-在 `setNamespaces` 方法中不仅会设置进程相关的命名空间，还会设置与用户、网络、IPC 以及 UTS 相关的命名空间：
+在 *setNamespaces* 方法中不仅会设置进程相关的命名空间，还会设置与用户、网络、IPC 以及 UTS 相关的命名空间：
 
 ~~~go
 func setNamespaces(daemon *Daemon, s *specs.Spec, c *container.Container) error {
@@ -131,7 +131,7 @@ func setNamespaces(daemon *Daemon, s *specs.Spec, c *container.Container) error 
 }
 ~~~
 
-所有命名空间相关的设置 `Spec` 最后都会作为 `Create` 函数的入参在创建新的容器时进行设置：
+所有命名空间相关的设置 *Spec* 最后都会作为 *Create* 函数的入参在创建新的容器时进行设置：
 
 ~~~go
 daemon.containerd.Create(context.Background(), container.ID, spec, createOptions)
@@ -143,7 +143,7 @@ daemon.containerd.Create(context.Background(), container.ID, spec, createOptions
 
 如果 Docker 的容器通过 Linux 的命名空间完成了与宿主机进程的网络隔离，但是却有没有办法通过宿主机的网络与整个互联网相连，就会产生很多限制，所以 Docker 虽然可以通过命名空间创建一个隔离的网络环境，但是 Docker 中的服务仍然需要与外界相连才能发挥作用。
 
-每一个使用 `docker run` 启动的容器其实都具有单独的网络命名空间，Docker 为我们提供了四种不同的网络模式，Host、Container、None 和 Bridge 模式。
+每一个使用 *docker run* 启动的容器其实都具有单独的网络命名空间，Docker 为我们提供了四种不同的网络模式，Host、Container、None 和 Bridge 模式。
 
 ![docker-network](https://img.draveness.me/2017-11-30-docker-network.png)
 
@@ -173,7 +173,7 @@ target     prot opt source               destination
 RETURN     all  --  anywhere             anywhere
 ~~~
 
-我们在当前的机器上使用 `docker run -d -p 6379:6379 redis` 命令启动了一个新的 Redis 容器，在这之后我们再查看当前 `iptables` 的 NAT 配置就会看到在 `DOCKER` 的链中出现了一条新的规则：
+我们在当前的机器上使用 *docker run -d -p 6379:6379 redis* 命令启动了一个新的 Redis 容器，在这之后我们再查看当前 *iptables* 的 NAT 配置就会看到在 *DOCKER* 的链中出现了一条新的规则：
 
 ~~~sh
 DNAT       tcp  --  anywhere             anywhere             tcp dpt:6379 to:192.168.0.4:6379
@@ -198,7 +198,7 @@ rtt min/avg/max/mdev = 0.043/0.056/0.069/0.013 ms
 
 ![docker-network-forward](https://img.draveness.me/2017-11-30-docker-network-forward.png)
 
-当我们使用 `redis-cli` 在宿主机器的命令行中访问 127.0.0.1:6379 的地址时，经过 iptables 的 NAT PREROUTING 将 ip 地址定向到了 192.168.0.4，重定向过的数据包就可以通过 iptables 中的 FILTER 配置，最终在 NAT POSTROUTING 阶段将 ip 地址伪装成 127.0.0.1，到这里虽然从外面看起来我们请求的是 127.0.0.1:6379，但是实际上请求的已经是 Docker 容器暴露出的端口了。
+当我们使用 *redis-cli* 在宿主机器的命令行中访问 127.0.0.1:6379 的地址时，经过 iptables 的 NAT PREROUTING 将 ip 地址定向到了 192.168.0.4，重定向过的数据包就可以通过 iptables 中的 FILTER 配置，最终在 NAT POSTROUTING 阶段将 ip 地址伪装成 127.0.0.1，到这里虽然从外面看起来我们请求的是 127.0.0.1:6379，但是实际上请求的已经是 Docker 容器暴露出的端口了。
 
 ~~~sh
 $ redis-cli -h 127.0.0.1 -p 6379 ping
@@ -225,7 +225,7 @@ libnetwork 中最重要的概念，容器网络模型由以下的几个主要组
 
 虽然我们已经通过 Linux 的命名空间解决了进程和网络隔离的问题，在 Docker 进程中我们已经没有办法访问宿主机器上的其他进程并且限制了网络的访问，但是 Docker 容器中的进程仍然能够访问或者修改宿主机器上的其他目录，这是我们不希望看到的。
 
-在新的进程中创建隔离的挂载点命名空间需要在 `clone` 函数中传入 `CLONE_NEWNS`，这样子进程就能得到父进程挂载点的拷贝，如果不传入这个参数**子进程对文件系统的读写都会同步回父进程以及整个主机的文件系统**。
+在新的进程中创建隔离的挂载点命名空间需要在 *clone* 函数中传入 *CLONE_NEWNS*，这样子进程就能得到父进程挂载点的拷贝，如果不传入这个参数**子进程对文件系统的读写都会同步回父进程以及整个主机的文件系统**。
 
 如果一个容器需要启动，那么它一定需要提供一个根文件系统（rootfs），容器需要使用这个文件系统来创建一个新的进程，所有二进制的执行都必须在这个根文件系统中。
 
@@ -235,7 +235,7 @@ libnetwork 中最重要的概念，容器网络模型由以下的几个主要组
 
 ![libcontainer-symlinks-and-io](https://img.draveness.me/2017-11-30-libcontainer-symlinks-and-io.png)
 
-为了保证当前的容器进程没有办法访问宿主机器上其他目录，我们在这里还需要通过 libcontainer 提供的 `pivot_root` 或者 `chroot` 函数改变进程能够访问个文件目录的根节点。
+为了保证当前的容器进程没有办法访问宿主机器上其他目录，我们在这里还需要通过 libcontainer 提供的 *pivot_root* 或者 *chroot* 函数改变进程能够访问个文件目录的根节点。
 
 ~~~c
 // pivor_root
@@ -253,10 +253,10 @@ chdir("/");
 
 到这里我们就将容器需要的目录挂载到了容器中，同时也禁止当前的容器进程访问宿主机器上的其他目录，保证了不同文件系统的隔离。
 
-> 这一部分的内容是作者在 libcontainer 中的 [SPEC.md](https://github.com/opencontainers/runc/blob/master/libcontainer/SPEC.md) 文件中找到的，其中包含了 Docker 使用的文件系统的说明，对于 Docker 是否真的使用 `chroot` 来确保当前的进程无法访问宿主机器的目录，作者其实也**没有确切的答案**，一是 Docker 项目的代码太多庞大，不知道该从何入手，作者尝试通过 Google 查找相关的结果，但是既找到了无人回答的 [问题](https://forums.docker.com/t/does-the-docker-engine-use-chroot/25429)，也得到了与 SPEC 中的描述有冲突的 [答案](https://www.quora.com/Do-Docker-containers-use-a-chroot-environment) ，如果各位读者有明确的答案可以在博客下面留言，非常感谢。
+> 这一部分的内容是作者在 libcontainer 中的 [SPEC.md](https://github.com/opencontainers/runc/blob/master/libcontainer/SPEC.md) 文件中找到的，其中包含了 Docker 使用的文件系统的说明，对于 Docker 是否真的使用 *chroot* 来确保当前的进程无法访问宿主机器的目录，作者其实也**没有确切的答案**，一是 Docker 项目的代码太多庞大，不知道该从何入手，作者尝试通过 Google 查找相关的结果，但是既找到了无人回答的 [问题](https://forums.docker.com/t/does-the-docker-engine-use-chroot/25429)，也得到了与 SPEC 中的描述有冲突的 [答案](https://www.quora.com/Do-Docker-containers-use-a-chroot-environment) ，如果各位读者有明确的答案可以在博客下面留言，非常感谢。
 
 ### chroot 
-在这里不得不简单介绍一下 `chroot`（change root），在 Linux 系统中，系统默认的目录就都是以 `/` 也就是根目录开头的，`chroot` 的使用能够改变当前的系统根目录结构，通过改变当前系统的根目录，我们能够限制用户的权利，在新的根目录下并不能够访问旧系统根目录的结构个文件，也就建立了一个与原系统完全隔离的目录结构。
+在这里不得不简单介绍一下 *chroot*（change root），在 Linux 系统中，系统默认的目录就都是以 */* 也就是根目录开头的，*chroot* 的使用能够改变当前的系统根目录结构，通过改变当前系统的根目录，我们能够限制用户的权利，在新的根目录下并不能够访问旧系统根目录的结构个文件，也就建立了一个与原系统完全隔离的目录结构。
 
 > 与 chroot 的相关内容部分来自 [理解 chroot](https://www.ibm.com/developerworks/cn/linux/l-cn-chroot/index.html) 一文，各位读者可以阅读这篇文章获得更详细的信息。
 
@@ -319,13 +319,13 @@ release_agent
 tasks
 ~~~
 
-`9c3057xxx` 其实就是我们运行的一个 Docker 容器，启动这个容器时，Docker 会为这个容器创建一个与容器标识符相同的 CGroup，在当前的主机上 CGroup 就会有以下的层级关系：
+*9c3057xxx* 其实就是我们运行的一个 Docker 容器，启动这个容器时，Docker 会为这个容器创建一个与容器标识符相同的 CGroup，在当前的主机上 CGroup 就会有以下的层级关系：
 
 ![linux-cgroups](https://img.draveness.me/2017-11-30-linux-cgroups.png)
 
-每一个 CGroup 下面都有一个 `tasks` 文件，其中存储着属于当前控制组的所有进程的 pid，作为负责 cpu 的子系统，`cpu.cfs_quota_us` 文件中的内容能够对 CPU 的使用作出限制，如果当前文件的内容为 50000，那么当前控制组中的全部进程的 CPU 占用率不能超过 50%。
+每一个 CGroup 下面都有一个 *tasks* 文件，其中存储着属于当前控制组的所有进程的 pid，作为负责 cpu 的子系统，*cpu.cfs_quota_us* 文件中的内容能够对 CPU 的使用作出限制，如果当前文件的内容为 50000，那么当前控制组中的全部进程的 CPU 占用率不能超过 50%。
 
-如果系统管理员想要控制 Docker 某个容器的资源使用率就可以在 `docker` 这个父控制组下面找到对应的子控制组并且改变它们对应文件的内容，当然我们也可以直接在程序运行时就使用参数，让 Docker 进程去改变相应文件中的内容。
+如果系统管理员想要控制 Docker 某个容器的资源使用率就可以在 *docker* 这个父控制组下面找到对应的子控制组并且改变它们对应文件的内容，当然我们也可以直接在程序运行时就使用参数，让 Docker 进程去改变相应文件中的内容。
 
 ~~~shell
 $ docker run -it -d --cpu-quota=50000 busybox
@@ -343,7 +343,7 @@ $ cat cpu.cfs_quota_us
 
 Linux 的命名空间和控制组分别解决了不同资源隔离的问题，前者解决了进程、网络以及文件系统的隔离，后者实现了 CPU、内存等资源的隔离，但是在 Docker 中还有另一个非常重要的问题需要解决 - 也就是镜像。
 
-镜像到底是什么，它又是如何组成和组织的是作者使用 Docker 以来的一段时间内一直比较让作者感到困惑的问题，我们可以使用 `docker run` 非常轻松地从远程下载 Docker 的镜像并在本地运行。
+镜像到底是什么，它又是如何组成和组织的是作者使用 Docker 以来的一段时间内一直比较让作者感到困惑的问题，我们可以使用 *docker run* 非常轻松地从远程下载 Docker 的镜像并在本地运行。
 
 Docker 镜像其实本质就是一个压缩包，我们可以使用下面的命令将一个 Docker 镜像中的文件导出：
 
@@ -372,7 +372,7 @@ CMD python /app/app.py
 
 ![docker-container-laye](https://img.draveness.me/2017-11-30-docker-container-layer.png)
 
-当镜像被 `docker run` 命令创建时就会在镜像的最上层添加一个可写的层，也就是容器层，所有对于运行时容器的修改其实都是对这个容器读写层的修改。
+当镜像被 *docker run* 命令创建时就会在镜像的最上层添加一个可写的层，也就是容器层，所有对于运行时容器的修改其实都是对这个容器读写层的修改。
 
 容器和镜像的区别就在于，所有的镜像都是只读的，而每一个容器其实等于镜像加上一个可读写的层，也就是同一个镜像可以对应多个容器。
 
@@ -386,7 +386,7 @@ AUFS 作为联合文件系统，它能够将不同文件夹中的层联合（Uni
 
 ![docker-aufs](https://img.draveness.me/2017-11-30-docker-aufs.png)
 
-每一个镜像层或者容器层都是 `/var/lib/docker/` 目录下的一个子文件夹；在 Docker 中，所有镜像层和容器层的内容都存储在 `/var/lib/docker/aufs/diff/` 目录中：
+每一个镜像层或者容器层都是 */var/lib/docker/* 目录下的一个子文件夹；在 Docker 中，所有镜像层和容器层的内容都存储在 */var/lib/docker/aufs/diff/* 目录中：
 
 ~~~shell
 $ ls /var/lib/docker/aufs/diff/00adcccc1a55a36a610a6ebb3e07cc35577f2f5a3b671be3dbc0e74db9ca691c       93604f232a831b22aeb372d5b11af8c8779feb96590a6dc36a80140e38e764d8
@@ -395,7 +395,7 @@ $ ls /var/lib/docker/aufs/diff/00adcccc1a55a36a610a6ebb3e07cc35577f2f5a3b671be3d
 ...
 ~~~
 
-而 `/var/lib/docker/aufs/layers/` 中存储着镜像层的元数据，每一个文件都保存着镜像层的元数据，最后的 `/var/lib/docker/aufs/mnt/` 包含镜像或者容器层的挂载点，最终会被 Docker 通过联合的方式进行组装。
+而 */var/lib/docker/aufs/layers/* 中存储着镜像层的元数据，每一个文件都保存着镜像层的元数据，最后的 */var/lib/docker/aufs/mnt/* 包含镜像或者容器层的挂载点，最终会被 Docker 通过联合的方式进行组装。
 
 ![docker-filesystems](https://img.draveness.me/2017-11-30-docker-filesystems.png)
 
@@ -403,7 +403,7 @@ $ ls /var/lib/docker/aufs/diff/00adcccc1a55a36a610a6ebb3e07cc35577f2f5a3b671be3d
 
 ### 其他存储驱动
 
-AUFS 只是 Docker 使用的存储驱动的一种，除了 AUFS 之外，Docker 还支持了不同的存储驱动，包括 `aufs`、`devicemapper`、`overlay2`、`zfs` 和 `vfs` 等等，在最新的 Docker 中，`overlay2` 取代了 `aufs` 成为了推荐的存储驱动，但是在没有 `overlay2` 驱动的机器上仍然会使用 `aufs` 作为 Docker 的默认驱动。
+AUFS 只是 Docker 使用的存储驱动的一种，除了 AUFS 之外，Docker 还支持了不同的存储驱动，包括 *aufs*、*devicemapper*、*overlay2*、*zfs* 和 *vfs* 等等，在最新的 Docker 中，*overlay2* 取代了 *aufs* 成为了推荐的存储驱动，但是在没有 *overlay2* 驱动的机器上仍然会使用 *aufs* 作为 Docker 的默认驱动。
 
 ![docker-storage-driver](https://img.draveness.me/2017-11-30-docker-storage-driver.png)
 
@@ -416,7 +416,7 @@ $ docker info | grep Storage
 Storage Driver: aufs
 ~~~
 
-作者的这台 Ubuntu 上由于没有 `overlay2` 存储驱动，所以使用 `aufs` 作为 Docker 的默认存储驱动。
+作者的这台 Ubuntu 上由于没有 *overlay2* 存储驱动，所以使用 *aufs* 作为 Docker 的默认存储驱动。
 
 ## 总结
 
