--- a/_posts/2018-12-19-326-docker.md
+++ b/_posts/2018-12-19-326-docker.md
@@ -145,7 +145,7 @@ daemon.containerd.Create(context.Background(), container.ID, spec, createOptions
 
 每一个使用 *docker run* 启动的容器其实都具有单独的网络命名空间，Docker 为我们提供了四种不同的网络模式，Host、Container、None 和 Bridge 模式。
 
-![docker-network](https://img.draveness.me//uploads/2018/12/19-06.png)
+![docker-network](/uploads/2018/12/19-06.png)
 
 在这一部分，我们将介绍 Docker 默认的网络设置模式：网桥模式。在这种模式下，除了分配隔离的网络命名空间之外，Docker 还会为所有的容器设置 IP 地址。当 Docker 服务器在主机上启动之后会创建新的虚拟网桥 docker0，随后在该主机上启动的全部服务在默认情况下都与该网桥相连。
 
