--- a/_posts/2018-12-20-327-k8s.md
+++ b/_posts/2018-12-20-327-k8s.md
@@ -220,7 +220,20 @@ func NewControllerInitializers(loopMode ControllerLoopMode) map[string]InitFunc 
 
 ## 相关文章
 
-{% include related/distributed-system.md %}
++ 基础
+  + [分布式事务的实现原理](https://draveness.me/distributed-transaction-principle)
+  + [分布式系统与消息的投递](https://draveness.me/message-delivery)
++ 数据库
+  + [分布式键值存储 Dynamo 的实现原理](https://draveness.me/dynamo)
+  + [浅析 Bigtable 和 LevelDB 的实现](https://draveness.me/bigtable-leveldb)
++ 分布式协调 & 服务发现
+  + [详解分布式协调服务 ZooKeeper](https://draveness.me/zookeeper-chubby)
+  + [高可用分布式存储 etcd 的实现原理](https://draveness.me/etcd-introduction)
+  + [详解 DNS 与 CoreDNS 的实现原理](https://draveness.me/dns-coredns)
++ 容器编排
+  + [谈 Kubernetes 的架构设计与实现原理](https://draveness.me/understanding-kubernetes)
+  + [从 Kubernetes 中的对象谈起](https://draveness.me/kubernetes-object-intro.md)
+
 
 ## Reference
 
