--- a/_posts/2018-12-24-328-k8s.md
+++ b/_posts/2018-12-24-328-k8s.md
@@ -14,8 +14,8 @@ tags: [kubernetes, Docker, 微服务, 容器编排]
 # IP地址配置信息
 
 + Master(172.17.116.249)
-+ Work1(172.17.116.250)
-+ Work2(172.17.116.251)
++ Worker1(172.17.116.250)
++ Worker2(172.17.116.251)
 
 # 关闭防火墙
 
