--- a/_posts/2018-12-24-330-rsTech.md
+++ b/_posts/2018-12-24-330-rsTech.md
@@ -40,32 +40,25 @@ tags: [框架]
 </table>
 
 # 后端技术
-+ 框架
-  + springboot
-+ 权限控制
-  + shiro
-  + Json-Filter
-+ 数据库访问
-  + mybatis-plus
-+ 日志
-  + slf4j
-+ 接口
-  + swagger, api doc
-  + API接口技术
-+ 缓存
-  + guava
-  + redis
-+ 表格处理
-  + poi, easy-poi
-+ 微信相关：
-  + 小程序
-  + 微信公众号
-+ 第三方支付
-  + 杉德支付
-+ 数据爬取
-  + OkHttp3 + HtmlCleaner
-+ 发送短信邮件
-  + OkHttp3, Spring Mail Sender(SMTP, SSL)
+
+<table>
+<tr><th>序号</th><th>类别</th><th>名称</th></tr>
+<tr><td>01</td><td>框架</td><td>springboot</td></tr>
+<tr><td>02</td><td>权限控制</td><td>shiro</td></tr>
+<tr><td>03</td><td>权限控制</td><td></td>Json-Filter</tr>
+<tr><td>04</td><td>数据库访问</td><td>mybatis-plus</td></tr>
+<tr><td>05</td><td>日志</td><td>slf4j</td></tr>
+<tr><td>06</td><td>接口</td><td>swagger, api doc</td></tr>
+<tr><td>07</td><td>接口</td><td>API接口技术</td></tr>
+<tr><td>08</td><td>缓存</td><td>guava</td></tr>
+<tr><td>09</td><td>缓存</td><td>redis</td></tr>
+<tr><td>10</td><td>表格处理</td>poi, easy-poi<td></td></tr>
+<tr><td>11</td><td>微信相关</td><td>小程序</td></tr>
+<tr><td>12</td><td>微信相关</td><td>微信公众号</td></tr>
+<tr><td>13</td><td>第三方支付</td><td>杉德支付</td></tr>
+<tr><td>14</td><td>数据爬取</td><td>OkHttp3 + HtmlCleaner</td></tr>
+<tr><td>15</td><td>发送短信邮件</td><td>OkHttp3, Spring Mail Sender(SMTP, SSL)</td></tr>
+</table>
 
 # 统计
 
