--- a/_posts/2018-12-24-330-rsTech.md
+++ b/_posts/2018-12-24-330-rsTech.md
@@ -1,11 +1,11 @@
 ---
 layout: post
-title: 研发项目相关框架
+title: JAVA项目技术相关
 pid: 330
 tags: [框架]
 ---
 
-# 研发支撑相关
+# 基础设施
 
 <table>
 <tr><th>序号</th><th>类别</th><th>名称</th></tr>
@@ -14,7 +14,7 @@ tags: [框架]
 <tr><td>3</td><td>基础框架</td><td>rsframework</td></tr>
 <tr><td>4</td><td>操作系统</td><td>linux</td></tr>
 <tr><td>5</td><td>数据库</td><td>oracle</td></tr>
-<tr><td>6</td><td></td><td>sqlserver</td></tr>
+<tr><td>6</td><td>数据库</td><td>sqlserver</td></tr>
 </table>
 
 # 前端技术
