--- a/_posts/2018-12-24-330-rsTech.md
+++ b/_posts/2018-12-24-330-rsTech.md
@@ -9,12 +9,12 @@ tags: [框架]
 
 <table>
 <tr><th>序号</th><th>类别</th><th>名称</th></tr>
-<tr><td>1</td><td>问题管理</td><td>jenkins</td></tr>
-<tr><td>2</td><td>代码管理</td><td>gitlab</td></tr>
-<tr><td>3</td><td>基础框架</td><td>rsframework</td></tr>
-<tr><td>4</td><td>操作系统</td><td>linux</td></tr>
-<tr><td>5</td><td>数据库</td><td>oracle</td></tr>
-<tr><td>6</td><td>数据库</td><td>sqlserver</td></tr>
+<tr><td>01</td><td>问题管理</td><td>jenkins</td></tr>
+<tr><td>02</td><td>代码管理</td><td>gitlab</td></tr>
+<tr><td>03</td><td>基础框架</td><td>rsframework</td></tr>
+<tr><td>04</td><td>操作系统</td><td>linux</td></tr>
+<tr><td>05</td><td>数据库</td><td>oracle</td></tr>
+<tr><td>06</td><td>数据库</td><td>sqlserver</td></tr>
 </table>
 
 # 前端技术
@@ -62,6 +62,6 @@ tags: [框架]
 
 # 统计
 
-+ 研发支撑相关：6个
-+ 前端技术相关：16个
-+ 后端技术相关：15个
++ 基础设施：6个
++ 前端技术：16个
++ 后端技术：15个
