--- a/_posts/2018-12-24-330-rsTech.md
+++ b/_posts/2018-12-24-330-rsTech.md
@@ -9,7 +9,8 @@ tags: [框架]
 
 <table>
 <tr><th>序号</th><th>类别</th><th>名称</th></tr>
-<tr><td>01</td><td>问题管理</td><td>jenkins</td></tr>
+<tr><td>01</td><td>问题管理</td><td>redmine</td></tr>
+<tr><td>01</td><td>持续集成</td><td>jenkins</td></tr>
 <tr><td>02</td><td>代码管理</td><td>gitlab</td></tr>
 <tr><td>03</td><td>基础框架</td><td>rsframework</td></tr>
 <tr><td>04</td><td>操作系统</td><td>linux</td></tr>
